Added testing for Course Recommendations